// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/dailySchedule DELETE / /:dailyScheduleId - delete a daily schedule Id then undelete it 1`] = `
Object {
  "entities": Object {
    "dailySchedules": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "accountId": null,
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "46344262-9039-47fa-a4e6-d762dcc57308",
}
`;

exports[`/api/dailySchedule DELETE / /:dailyScheduleId - delete a daily schedule Id then undelete it with batch 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:16:30.932Z",
      },
      "id": "46344262-9039-47fa-a4e6-d762dcc57308",
      "type": "dailySchedule",
    },
  ],
}
`;

exports[`/api/dailySchedule DELETE / /:dailyScheduleId - delete a dailySchedule 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/dailySchedule POST / create dailySchedule - json api 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "breaks": Array [],
      "chairIds": Array [],
      "date": "2017-12-12",
      "endTime": "2017-07-19T00:17:30.932Z",
      "pmsId": "12",
      "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      "startTime": "2017-07-19T00:16:30.932Z",
    },
    "id": "46344262-9039-47fa-a4e6-d762dcc57308",
    "type": "dailySchedule",
  },
}
`;

exports[`/api/dailySchedule POST / create dailySchedule 1`] = `
Object {
  "entities": Object {
    "dailySchedules": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "isClosed": true,
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "46344262-9039-47fa-a4e6-d762dcc57308",
}
`;

exports[`/api/dailySchedule POST / create dailySchedule batch - json api 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:16:30.932Z",
      },
      "id": "46344262-9039-47fa-a4e6-d762dcc57308",
      "type": "dailySchedule",
    },
  ],
}
`;

exports[`/api/dailySchedule PUT / /:dailyScheduleId - update a daily schedule - json api 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "endTime": "2017-07-19T00:17:30.932Z",
      "pmsId": "12",
      "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
      "startTime": "2017-07-19T00:18:30.932Z",
    },
    "id": "46344262-9039-47fa-a4e6-d762dcc57308",
    "type": "practitionerSchedule",
  },
  "entities": Object {},
}
`;

exports[`/api/dailySchedule PUT / /:dailyScheduleId - update a daily schedule 1`] = `
Object {
  "entities": Object {
    "practitionerRecurringTimeOffs": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "accountId": null,
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "isClosed": true,
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:18:30.932Z",
      },
    },
  },
  "result": "46344262-9039-47fa-a4e6-d762dcc57308",
}
`;

exports[`/api/dailySchedule PUT / /:dailyScheduleId/batch - update a daily schedule - json api 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "breaks": Array [],
        "chairIds": Array [],
        "date": "2017-12-12",
        "endTime": "2017-07-19T00:17:30.932Z",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startTime": "2017-07-19T00:18:30.932Z",
      },
      "id": "46344262-9039-47fa-a4e6-d762dcc57308",
      "type": "dailySchedule",
    },
  ],
}
`;
